# knowledge-graph-kb

./: .env.example  .gitignore  README.md  main.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.test.tsx  app.tsx  main.tsx  setup_tests.ts  vite_env.d.ts
frontend/src/styles/: app.css
frontend/src/theme/: index.ts  theme_types.ts  use_theme_mode.ts
src/: __init__.py  app.py  app_factory.py
src/api/: __init__.py  dependencies.py  errors.py  router.py  schemas.py
src/api/routes/: __init__.py  configuration.py  document_routes.py  explore.py  graph_routes.py  imports.py  kb_graph_routes.py  kb_import_routes.py  kb_search_routes.py  kb_source_routes.py  model_config_routes.py  query.py  query_routes.py  system.py  system_routes.py
src/config/: __init__.py  settings.py
src/kb/: __init__.py  common.py  container.py
src/kb/application/: README.md  __init__.py
src/kb/database/: __init__.py  sqlite.py
src/kb/importing/: README.md  __init__.py  chunking.py  parser.py  (+2 more)
src/kb_graph/: __init__.py  app_factory.py  main.py
src/knowledge_base/: __init__.py  container.py
src/schemas/: __init__.py  extraction_contracts.py
src/services/: __init__.py  chunking_service.py  entity_extraction_service.py  graph_service.py  ingestion_service.py  model_config_service.py  openai_service.py  parser_service.py  query_service.py  vector_store_service.py
src/utils/: __init__.py  file.py  file_utils.py  logger.py  logging_utils.py  secret.py  secret_utils.py
src/web/: __init__.py  frontend.py
tests/: conftest.py  test_chat_and_model_config_api.py  test_chat_service.py  test_chunking.py  test_entity_extraction_service.py  test_frontend_routes.py  test_graph_api.py  test_graph_manual_scope_api.py  test_graph_service.py  test_import_graph_source_api.py  test_model_config_api.py  test_query_service.py  test_system_api.py  test_vector_store_service.py
(+183 files in other folders)
